fix modal max height on mobile devices

--- a/packages/flourish-ui/src/components/Modal/Modal.scss
+++ b/packages/flourish-ui/src/components/Modal/Modal.scss
@@ -7,7 +7,9 @@
   transform: translate(-50%, -50%);
   background-color: $f-color-bg-light;
   min-width: 450px;
-  max-height: 50vh;
+  min-height: 150px;
+  max-height: 100vh;
+  max-height: 50dvh;
   border: none;
   padding: 0;
   border-radius: calc($f-border-rounded * 1px);
